// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reactNativeAppGenerator .eslintrc.json matches snapshot 1`] = `
{
  "extends": [
    "../../.eslintrc.json",
  ],
  "ignorePatterns": [
    "node_modules",
  ],
  "overrides": [
    {
      "files": [
        "jest.config.ts",
        "test/**/*.ts",
        "*.spec.ts",
        "*.test.ts",
        "test/**/*.tsx",
        "*.spec.tsx",
        "*.test.tsx",
      ],
      "parserOptions": {
        "project": [
          "packages/react-native-app/tsconfig.spec.json",
        ],
      },
    },
    {
      "files": [
        "*.stories.tsx",
      ],
      "parserOptions": {
        "project": [
          "packages/react-native-app/tsconfig.storybook.json",
        ],
      },
    },
    {
      "excludedFiles": [
        "jest.config.ts",
        "test/**/*.ts",
        "*.spec.ts",
        "*.test.ts",
        "test/**/*.tsx",
        "*.stories.tsx",
        "*.spec.tsx",
        "*.test.tsx",
      ],
      "files": [
        "*.ts",
        "*.tsx",
      ],
      "parserOptions": {
        "project": [
          "packages/react-native-app/tsconfig.app.json",
        ],
      },
    },
    {
      "files": [
        "*.tsx",
      ],
      "rules": {
        "react/react-in-jsx-scope": "off",
      },
    },
  ],
}
`;

exports[`reactNativeAppGenerator Gemfile Gemfile matches snapshot 1`] = `
"source "https://rubygems.org"

# You may use http://rbenv.org/ or https://rvm.io/ to install and use this version
ruby ">= 3.2.2"

gem "cocoapods", "~> 1.12"
"
`;

exports[`reactNativeAppGenerator e2e .detoxrc.json matches snapshot 1`] = `
"{
  "testRunner": {
    "args": {
      "$0": "jest",
      "config": "./jest.config.json"
    },
    "jest": {
      "setupTimeout": 120000
    }
  },
  "apps": {
    "ios.debug": {
      "type": "ios.app",
      "build": "cd ../../packages/react-native-app/ios && xcodebuild -workspace ReactNativeApp.xcworkspace -scheme ReactNativeApp -configuration Debug -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 14' -derivedDataPath ./build -quiet",
      "binaryPath": "../../packages/react-native-app/ios/build/Build/Products/Debug-iphonesimulator/ReactNativeApp.app"
    },
    "ios.release": {
      "type": "ios.app",
      "build": "cd ../../packages/react-native-app/ios && xcodebuild -workspace ReactNativeApp.xcworkspace -scheme ReactNativeApp -configuration Release -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 14' -derivedDataPath ./build -quiet",
      "binaryPath": "../../packages/react-native-app/ios/build/Build/Products/Release-iphonesimulator/ReactNativeApp.app"
    },
    "android.debug": {
      "type": "android.apk",
      "build": "cd ../../packages/react-native-app/android && ./gradlew assembleDebug assembleAndroidTest -DtestBuildType=debug",
      "binaryPath": "../../packages/react-native-app/android/app/build/outputs/apk/debug/app-debug.apk"
    },
    "android.release": {
      "type": "android.apk",
      "build": "cd ../../packages/react-native-app/android && ./gradlew assembleRelease assembleAndroidTest -DtestBuildType=release",
      "binaryPath": "../../packages/react-native-app/android/app/build/outputs/apk/release/app-release.apk"
    }
  },
  "devices": {
    "simulator": {
      "type": "ios.simulator",
      "device": {
        "type": "iPhone 14"
      }
    },
    "emulator": {
      "type": "android.emulator",
      "device": {
        "avdName": "Pixel_4a_API_30"
      }
    }
  },
  "configurations": {
    "ios.sim.release": {
      "device": "simulator",
      "app": "ios.release"
    },
    "ios.sim.debug": {
      "device": "simulator",
      "app": "ios.debug"
    },
    "android.emu.release": {
      "device": "emulator",
      "app": "android.release"
    },
    "android.emu.debug": {
      "device": "emulator",
      "app": "android.debug"
    }
  }
}
"
`;

exports[`reactNativeAppGenerator e2e .eslintrc.json matches snapshot 1`] = `
{
  "extends": [
    "../../.eslintrc.json",
  ],
  "ignorePatterns": [
    "node_modules",
  ],
  "overrides": [
    {
      "files": [
        "jest.config.ts",
        "test/**/*.ts",
        "*.spec.ts",
        "*.test.ts",
      ],
      "parserOptions": {
        "project": [
          "e2e/react-native-app-e2e/tsconfig.spec.json",
        ],
      },
    },
  ],
}
`;

exports[`reactNativeAppGenerator e2e jest.config.json jest.config.json matches snapshot 1`] = `
"{
  "preset": "../../jest.preset",
  "rootDir": ".",
  "testMatch": [
    "<rootDir>/test/**/*.test.ts?(x)",
    "<rootDir>/test/**/*.spec.ts?(x)"
  ],
  "testTimeout": 120000,
  "maxWorkers": 1,
  "globalSetup": "detox/runners/jest/globalSetup",
  "globalTeardown": "detox/runners/jest/globalTeardown",
  "reporters": [
    [
      "jest-junit",
      {
        "addFileAttribute": "true",
        "classNameTemplate": "{suitename}",
        "outputDirectory": "reports/junit",
        "outputName": "react-native-app-e2e.xml"
      }
    ]
  ],
  "testEnvironment": "detox/runners/jest/testEnvironment",
  "verbose": true,
  "setupFilesAfterEnv": [
    "<rootDir>/test/setup/setup.ts"
  ],
  "coverageDirectory": "../../reports/coverage/e2e/react-native-app-e2e"
}
"
`;

exports[`reactNativeAppGenerator e2e project.json matches snapshot 1`] = `
{
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "implicitDependencies": [
    "react-native-app",
  ],
  "name": "react-native-app-e2e",
  "projectType": "application",
  "sourceRoot": "packages/react-native-app-e2e/src",
  "tags": [],
  "targets": {
    "build-android": {
      "configurations": {
        "production": {
          "detoxConfiguration": "android.emu.release",
        },
      },
      "executor": "@nx/detox:build",
      "options": {
        "detoxConfiguration": "android.emu.debug",
      },
    },
    "build-ios": {
      "configurations": {
        "production": {
          "detoxConfiguration": "ios.sim.release",
        },
      },
      "executor": "@nx/detox:build",
      "options": {
        "detoxConfiguration": "ios.sim.debug",
      },
    },
    "lint": {
      "executor": "@nx/linter:eslint",
      "options": {
        "lintFilePatterns": [
          "e2e/react-native-app-e2e/**/*.{ts,tsx,js,jsx}",
        ],
      },
      "outputs": [
        "{options.outputFile}",
      ],
    },
    "test-android": {
      "configurations": {
        "production": {
          "buildTarget": "react-native-app-e2e:build-android:production",
          "detoxConfiguration": "android.emu.release",
        },
      },
      "executor": "@nx/detox:test",
      "options": {
        "buildTarget": "react-native-app-e2e:build-android",
        "detoxConfiguration": "android.emu.debug",
      },
    },
    "test-ios": {
      "configurations": {
        "production": {
          "buildTarget": "react-native-app-e2e:build-ios:production",
          "detoxConfiguration": "ios.sim.release",
        },
      },
      "executor": "@nx/detox:test",
      "options": {
        "buildTarget": "react-native-app-e2e:build-ios",
        "detoxConfiguration": "ios.sim.debug",
      },
    },
  },
}
`;

exports[`reactNativeAppGenerator e2e project.json matches snapshot 2`] = `
"{
  "name": "react-native-app-e2e",
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "sourceRoot": "packages/react-native-app-e2e/src",
  "projectType": "application",
  "targets": {
    "build-ios": {
      "executor": "@nx/detox:build",
      "options": {
        "detoxConfiguration": "ios.sim.debug"
      },
      "configurations": {
        "production": {
          "detoxConfiguration": "ios.sim.release"
        }
      }
    },
    "test-ios": {
      "executor": "@nx/detox:test",
      "options": {
        "detoxConfiguration": "ios.sim.debug",
        "buildTarget": "react-native-app-e2e:build-ios"
      },
      "configurations": {
        "production": {
          "detoxConfiguration": "ios.sim.release",
          "buildTarget": "react-native-app-e2e:build-ios:production"
        }
      }
    },
    "build-android": {
      "executor": "@nx/detox:build",
      "options": {
        "detoxConfiguration": "android.emu.debug"
      },
      "configurations": {
        "production": {
          "detoxConfiguration": "android.emu.release"
        }
      }
    },
    "test-android": {
      "executor": "@nx/detox:test",
      "options": {
        "detoxConfiguration": "android.emu.debug",
        "buildTarget": "react-native-app-e2e:build-android"
      },
      "configurations": {
        "production": {
          "detoxConfiguration": "android.emu.release",
          "buildTarget": "react-native-app-e2e:build-android:production"
        }
      }
    },
    "lint": {
      "executor": "@nx/linter:eslint",
      "outputs": [
        "{options.outputFile}"
      ],
      "options": {
        "lintFilePatterns": [
          "e2e/react-native-app-e2e/**/*.{ts,tsx,js,jsx}"
        ]
      }
    }
  },
  "tags": [],
  "implicitDependencies": [
    "react-native-app"
  ]
}
"
`;

exports[`reactNativeAppGenerator e2e typescript tsconfig.json tsconfig.json matches snapshot 1`] = `
"{
  "extends": "../../tsconfig.base.json",
  "files": [],
  "include": [],
  "references": [
    {
      "path": "./tsconfig.spec.json"
    }
  ]
}
"
`;

exports[`reactNativeAppGenerator e2e typescript tsconfig.spec.json matches snapshot 1`] = `
"{
  "extends": "./tsconfig.json",
  "compilerOptions": {
    "sourceMap": false,
    "outDir": "../../dist/out-tsc",
    "allowJs": true,
    "types": ["node", "jest", "detox"]
  },
  "include": ["test/**/*.ts", "test/**/*.js"]
}
"
`;

exports[`reactNativeAppGenerator jest.config.ts jest.config.ts matches snapshot 1`] = `
"export default {
  displayName: "react-native-app",
    preset: "react-native",
  resolver: "@nx/jest/plugins/resolver",
  setupFilesAfterEnv: ["<rootDir>/test/setup/setup.ts"],
  moduleNameMapper: {
    "\\\\.svg$": "@nx/react-native/plugins/jest/svg-mock",
  },
            moduleFileExtensions: ["ts", "tsx", "js", "jsx", "html", "json"],
    coverageDirectory: "../../reports/coverage/packages/react-native-app",
  reporters: [
    "default",
    [
      "jest-junit",
      {
        addFileAttribute: "true",
        classNameTemplate: "{suitename}",
        outputDirectory: "reports/junit",
        outputName: "react-native-app.xml",
      },
    ],
  ],
};
"
`;

exports[`reactNativeAppGenerator native projects fastlane Appfile Appfile matches snapshot 1`] = `undefined`;

exports[`reactNativeAppGenerator native projects fastlane Fastfile matches snapshot 1`] = `undefined`;

exports[`reactNativeAppGenerator native projects ios Podfile Podfile matches snapshot 1`] = `
"# Resolve react_native_pods.rb with node to allow for hoisting
require Pod::Executable.execute_command("node", ["-p",
  'require.resolve(
    "react-native/scripts/react_native_pods.rb",
    {paths: [process.argv[1]]},
  )', __dir__]).strip

platform :ios, min_ios_version_supported
prepare_react_native_project!

# If you are using a \`react-native-flipper\` your iOS build will fail when \`NO_FLIPPER=1\` is set.
# because \`react-native-flipper\` depends on (FlipperKit,...) that will be excluded
#
# To fix this you can also exclude \`react-native-flipper\` using a \`react-native.config.js\`
# \`\`\`js
# module.exports = {
#   dependencies: {
#     ...(process.env.NO_FLIPPER ? { "react-native-flipper": { platforms: { ios: null } } } : {}),
# \`\`\`
flipper_config = ENV["NO_FLIPPER"] == "1" ? FlipperConfiguration.disabled : FlipperConfiguration.enabled

linkage = ENV["USE_FRAMEWORKS"]
if linkage != nil
  Pod::UI.puts "Configuring Pod with #{linkage}ally linked Frameworks".green
  use_frameworks! :linkage => linkage.to_sym
end

target "ReactNativeApp" do
  config = use_native_modules!

  # Flags change depending on the env values.
  flags = get_default_flags()

  use_react_native!(
    :path => config[:reactNativePath],
    # Hermes is now enabled by default. Disable by setting this flag to false.
    :hermes_enabled => flags[:hermes_enabled],
    :fabric_enabled => flags[:fabric_enabled],
    # Enables Flipper.
    #
    # Note that if you have use_frameworks! enabled, Flipper will not work and
    # you should disable the next line.
    :flipper_configuration => flipper_config,
    # An absolute path to your application root.
    :app_path => "#{Pod::Config.instance.installation_root}/.."
  )

  target "ReactNativeAppTests" do
    inherit! :complete
    # Pods for testing
  end

  post_install do |installer|
    # https://github.com/facebook/react-native/blob/main/packages/react-native/scripts/react_native_pods.rb#L197-L202
    react_native_post_install(
      installer,
      config[:reactNativePath],
      :mac_catalyst_enabled => false
    )
    __apply_Xcode_12_5_M1_post_install_workaround(installer)
  end
end
"
`;

exports[`reactNativeAppGenerator project.json matches snapshot 1`] = `
{
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "name": "react-native-app",
  "projectType": "application",
  "sourceRoot": "packages/react-native-app/src",
  "tags": [],
  "targets": {
    "build-android": {
      "dependsOn": [
        "ensure-symlink",
        "sync-deps",
      ],
      "executor": "@nx/react-native:build-android",
      "options": {},
      "outputs": [
        "{projectRoot}/android/app/build/outputs/bundle",
        "{projectRoot}/android/app/build/outputs/apk",
      ],
    },
    "build-ios": {
      "dependsOn": [
        "ensure-symlink",
        "sync-deps",
        "pod-install",
      ],
      "executor": "@nx/react-native:build-ios",
      "options": {},
      "outputs": [
        "{projectRoot}/ios/build/Build",
      ],
    },
    "bundle-android": {
      "dependsOn": [
        "ensure-symlink",
      ],
      "executor": "@nx/react-native:bundle",
      "options": {
        "bundleOutput": "dist/packages/react-native-app/android/main.jsbundle",
        "entryFile": "src/main.tsx",
        "platform": "android",
      },
      "outputs": [
        "{options.bundleOutput}",
      ],
    },
    "bundle-ios": {
      "dependsOn": [
        "ensure-symlink",
      ],
      "executor": "@nx/react-native:bundle",
      "options": {
        "bundleOutput": "dist/packages/react-native-app/ios/main.jsbundle",
        "entryFile": "src/main.tsx",
        "platform": "ios",
      },
      "outputs": [
        "{options.bundleOutput}",
      ],
    },
    "ensure-symlink": {
      "executor": "@nx/react-native:ensure-symlink",
      "options": {},
    },
    "lint": {
      "executor": "@nx/linter:eslint",
      "options": {
        "lintFilePatterns": [
          "packages/react-native-app",
        ],
      },
      "outputs": [
        "{options.outputFile}",
      ],
    },
    "pod-install": {
      "executor": "@nx/react-native:pod-install",
      "options": {},
    },
    "run-android": {
      "dependsOn": [
        "ensure-symlink",
        "sync-deps",
      ],
      "executor": "@nx/react-native:run-android",
      "options": {},
    },
    "run-ios": {
      "dependsOn": [
        "ensure-symlink",
        "sync-deps",
        "pod-install",
      ],
      "executor": "@nx/react-native:run-ios",
      "options": {},
    },
    "serve": {
      "executor": "nx:run-commands",
      "options": {
        "command": "nx start react-native-app",
      },
    },
    "start": {
      "dependsOn": [
        "ensure-symlink",
        "sync-deps",
        "pod-install",
      ],
      "executor": "@nx/react-native:start",
      "options": {
        "port": 8081,
      },
    },
    "sync-deps": {
      "executor": "@nx/react-native:sync-deps",
      "options": {},
    },
    "test": {
      "configurations": {
        "ci": {
          "ci": true,
          "codeCoverage": true,
        },
      },
      "executor": "@nx/jest:jest",
      "options": {
        "jestConfig": "packages/react-native-app/jest.config.ts",
        "passWithNoTests": true,
      },
      "outputs": [
        "reports/coverage/packages/react-native-app",
        "reports/junit/react-native-app.xml",
      ],
    },
  },
}
`;

exports[`reactNativeAppGenerator tsconfig.app.json or tsconfig.lib.json matches snapshot 1`] = `
{
  "compilerOptions": {
    "declaration": true,
  },
  "exclude": [
    "jest.config.ts",
    "**/*.spec.ts",
    "**/*.test.ts",
    "**/*.spec.tsx",
    "**/*.test.tsx",
    "test",
  ],
  "extends": "./tsconfig.json",
  "include": [
    "**/*.ts",
    "**/*.tsx",
  ],
}
`;

exports[`reactNativeAppGenerator tsconfig.json matches snapshot 1`] = `
{
  "compilerOptions": {
    "jsx": "react-jsx",
    "lib": [
      "dom",
      "dom.iterable",
      "esnext",
    ],
    "module": "esnext",
    "outDir": "../../dist/out-tsc",
    "target": "es5",
  },
  "extends": "../../tsconfig.base.json",
  "files": [
    "../../node_modules/@nrwl/react/typings/cssmodule.d.ts",
  ],
  "include": [],
  "references": [
    {
      "path": "./tsconfig.app.json",
    },
    {
      "path": "./tsconfig.spec.json",
    },
  ],
}
`;

exports[`reactNativeAppGenerator tsconfig.spec.json matches snapshot 1`] = `
{
  "compilerOptions": {
    "module": "commonjs",
    "types": [
      "jest",
      "node",
    ],
  },
  "extends": "./tsconfig.json",
  "include": [
    "jest.config.ts",
    "**/*.spec.ts",
    "**/*.test.ts",
    "**/*.spec.tsx",
    "**/*.test.tsx",
    "**/*.d.ts",
    "test",
  ],
}
`;
